[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/futile-pro-v1/FutilePro.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/matchup-pro-v1.1/MatchupPro.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/BannerColors.gd" type="Script" id=3]
[ext_resource path="res://Fonts/equipment-pro-v1.1/EquipmentPro.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Scripts/NetworkManager.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 39
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 34
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 54
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 70.0
margin_right = -70.0
margin_bottom = -70.0
theme = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Selection" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Panel/Main_Selection"]
margin_right = 884.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0.388235, 0.0862745, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
text = "HIDE AND SEEK
SHAPE SHIFTERS"
align = 1
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Panel/Main_Selection/Label"]
wait_time = 0.3
autostart = true

[node name="Sep1" type="MarginContainer" parent="Panel/Main_Selection"]
margin_top = 119.0
margin_right = 884.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 40 )

[node name="MainNavButtons" type="VBoxContainer" parent="Panel/Main_Selection"]
visible = false
margin_top = 163.0
margin_right = 884.0
margin_bottom = 429.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/Main_Selection/MainNavButtons"]
margin_left = 162.0
margin_right = 722.0
margin_bottom = 70.0
rect_min_size = Vector2( 560, 70 )
size_flags_horizontal = 4
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "RANDOM MATCH"

[node name="Sep2" type="MarginContainer" parent="Panel/Main_Selection/MainNavButtons"]
margin_top = 74.0
margin_right = 884.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 20 )

[node name="Button2" type="Button" parent="Panel/Main_Selection/MainNavButtons"]
margin_left = 162.0
margin_top = 98.0
margin_right = 722.0
margin_bottom = 168.0
rect_min_size = Vector2( 560, 70 )
size_flags_horizontal = 4
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "CREATE PRIVATE MATCH"

[node name="Sep3" type="MarginContainer" parent="Panel/Main_Selection/MainNavButtons"]
margin_top = 172.0
margin_right = 884.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 20 )

[node name="Button3" type="Button" parent="Panel/Main_Selection/MainNavButtons"]
margin_left = 162.0
margin_top = 196.0
margin_right = 722.0
margin_bottom = 266.0
rect_min_size = Vector2( 560, 70 )
size_flags_horizontal = 4
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "JOIN PRIVATE MATCH"

[node name="PMCreation" type="VBoxContainer" parent="Panel/Main_Selection"]
visible = false
margin_top = 163.0
margin_right = 884.0
margin_bottom = 437.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExpMsg" type="Label" parent="Panel/Main_Selection/PMCreation"]
margin_left = 92.0
margin_right = 792.0
margin_bottom = 99.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "GIVE THIS MATCH ID TO YOUR
FRIENDS TO PLAY WITH YOU
*be sure to copy it before joining*"
align = 1

[node name="Sep" type="MarginContainer" parent="Panel/Main_Selection/PMCreation"]
margin_top = 103.0
margin_right = 884.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Main_Selection/PMCreation"]
margin_left = 122.0
margin_top = 127.0
margin_right = 762.0
margin_bottom = 172.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Main_Selection/PMCreation/HBoxContainer"]
margin_top = 7.0
margin_right = 186.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Match ID :  "

[node name="LineEdit" type="LineEdit" parent="Panel/Main_Selection/PMCreation/HBoxContainer"]
margin_left = 190.0
margin_right = 640.0
margin_bottom = 45.0
rect_min_size = Vector2( 450, 45 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
editable = false

[node name="Sep2" type="MarginContainer" parent="Panel/Main_Selection/PMCreation"]
margin_top = 176.0
margin_right = 884.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 30 )

[node name="JoinBtn" type="Button" parent="Panel/Main_Selection/PMCreation"]
margin_left = 342.0
margin_top = 210.0
margin_right = 542.0
margin_bottom = 274.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "JOIN"

[node name="PMJoin" type="VBoxContainer" parent="Panel/Main_Selection"]
visible = false
margin_top = 163.0
margin_right = 884.0
margin_bottom = 423.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExpMsg" type="Label" parent="Panel/Main_Selection/PMJoin"]
margin_left = 131.0
margin_right = 752.0
margin_bottom = 65.0
rect_min_size = Vector2( 550, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "PASTE THE MATCH ID 
THAT THE HOST GAVE YOU HERE BELOW"
align = 1

[node name="Sep" type="MarginContainer" parent="Panel/Main_Selection/PMJoin"]
margin_top = 69.0
margin_right = 884.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Main_Selection/PMJoin"]
margin_left = 122.0
margin_top = 113.0
margin_right = 762.0
margin_bottom = 158.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Main_Selection/PMJoin/HBoxContainer"]
margin_top = 7.0
margin_right = 186.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Match ID :  "

[node name="LineEdit" type="LineEdit" parent="Panel/Main_Selection/PMJoin/HBoxContainer"]
margin_left = 190.0
margin_right = 640.0
margin_bottom = 45.0
rect_min_size = Vector2( 450, 45 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
placeholder_text = "Paste it here..."
caret_blink = true

[node name="Sep2" type="MarginContainer" parent="Panel/Main_Selection/PMJoin"]
margin_top = 162.0
margin_right = 884.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 30 )

[node name="JoinBtn" type="Button" parent="Panel/Main_Selection/PMJoin"]
margin_left = 342.0
margin_top = 196.0
margin_right = 542.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "JOIN"

[node name="UserNameSelection" type="VBoxContainer" parent="Panel/Main_Selection"]
margin_top = 163.0
margin_right = 884.0
margin_bottom = 389.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExpMsg" type="Label" parent="Panel/Main_Selection/UserNameSelection"]
margin_left = 167.0
margin_right = 717.0
margin_bottom = 31.0
rect_min_size = Vector2( 550, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "CHOOSE YOUR NICKNAME"
align = 1

[node name="Sep" type="MarginContainer" parent="Panel/Main_Selection/UserNameSelection"]
margin_top = 35.0
margin_right = 884.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Main_Selection/UserNameSelection"]
margin_left = 106.0
margin_top = 79.0
margin_right = 777.0
margin_bottom = 124.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Main_Selection/UserNameSelection/HBoxContainer"]
margin_top = 7.0
margin_right = 217.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "NICKNAME  :  "

[node name="LineEdit" type="LineEdit" parent="Panel/Main_Selection/UserNameSelection/HBoxContainer"]
margin_left = 221.0
margin_right = 671.0
margin_bottom = 45.0
rect_min_size = Vector2( 450, 45 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 13
placeholder_text = "my_nickname..."
caret_blink = true

[node name="Sep2" type="MarginContainer" parent="Panel/Main_Selection/UserNameSelection"]
margin_top = 128.0
margin_right = 884.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 30 )

[node name="nknmButton" type="Button" parent="Panel/Main_Selection/UserNameSelection"]
margin_left = 342.0
margin_top = 162.0
margin_right = 542.0
margin_bottom = 226.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "START"
